[package]
name = "blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = {version = "1.50.0",features = ["rt-multi-thread", "macros"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23",features = ["env-filter"]}
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["use_pem"] }
argon2 = "0.5.3"
