[package]
name = "blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.44",features=["serde"]}
serde = "1.0.228"
sqlx = { version = "0.8.6",features = ["runtime-tokio","tls-rustls","postgres"] }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["rt", "rt-multi-thread", "macros"] }
tower-http = { version = "0.6.10",features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23",features = ["env-filter"] }
